--- a/index.html
+++ b/index.html
@@ -6,9 +6,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generatore biglietti del treno</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <!-- SEZIONE CALCOLATORE BIGLIETTO -->
+    <div class="container-fluid text-center bg-pink py-5">
+        <h1 class="text-white">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+        <div class="container text-center py-5 bg-light rounded-3">
+            <div>
+                <label for="user">Nome e Cognome</label>
+                <input type="text" id="user" value="pippo">
+            </div>
+            <div>
+                <label for="km">Chilometri percorsi</label>
+                <input type="text" id="km" value="10">
+            </div>
+            <div>
+                <label for="age">Fascia d' eta&grave;</label>
+                <select name="age" id="age">
+                    <option value="mag">Maggiorenne</option>
+                    <option value="min">Minorenne</option>
+                    <option value="over">Over 65</option>
+                </select>
+            </div>
+            <div>
+                <button type="buttom" id="generate-button">Genera biglietto</button>
+                <button type="buttom" id="reset-button">Annulla</button>
+            </div>
+        </div>
+        <!-- SEZIONE IL TUO BIGLIETTO -->
+        <section id="ticket-section">
+            <h1 class="text-white">IL TUO BIGLIETTO</h1>
+            <div>
+                <p><strong>Nome passeggero:</strong><span id="passenger-name"></span></p>
+            </div>
+            <div>
+                <p><strong>Offerta:</strong><span id="offer"></span></p>
+            </div>
+            <div>
+                <p><strong>Carrozza:</strong><span id="carrozza"></span></p>
+            </div>
+            <div>
+                <p><strong>Codice CP:</strong><span id="cp"></span></p>
+            </div>
+            <div>
+                <p><strong>Costo biglietto:</strong><span id="price"></span></p>
+            </div>
+        </section>
+    </div>
     <script src="js/script.js"></script>
 </body>
 
